--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window
+﻿  
+    <Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="Project.SubWindow"
