--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -126,6 +126,11 @@
                 <DropShadowEffect BlurRadius="1" Color="#FFB9CFB7" ShadowDepth="4" Direction="315" />
             </Label.Effect>
         </Label>
-        <Label BorderThickness="2" BorderBrush="#FFB9CFB7" Width="678" Content="     Range of Correlation&#xA;     Value of Correlation                        Strength Relationship&#xA;     -1.0 to -0.5 or 1.0 to 0.5                  Strong&#xA;     -0.5 to -0.3 or 0.3 to 0.5                  Moderate&#xA;     -0.3 to -0.1 or 0.1 to 0.3                  Weak&#xA;     -0.1 to 0.1                                        None or very weak" Grid.Column="4" Grid.Row="1" Height="110" HorizontalAlignment="Left" Margin="684,590,0,0" Name="label6" VerticalAlignment="Top" FontSize="14"></Label>
+        <Label BorderThickness="2" BorderBrush="#FFB9CFB7" Width="678" Content="     Range of Correlation&#xA;     Value of Correlation                        Strength Relationship&#xA;     -1.0 to -0.5 or 1.0 to 0.5                  Strong&#xA;     -0.5 to -0.3 or 0.3 to 0.5                  Moderate&#xA;     -0.3 to -0.1 or 0.1 to 0.3                  Weak&#xA;     -0.1 to 0.1                                        None or very weak" Grid.Column="4" Grid.Row="1" Height="110" HorizontalAlignment="Left" Margin="684,590,0,0" Name="label6" VerticalAlignment="Top" FontSize="14" FontStyle="Normal" HorizontalContentAlignment="Left" FontWeight="Normal" FontStretch="Normal" Background="GhostWhite">
+            <Label.Effect>
+                <DropShadowEffect BlurRadius="1" Color="#FFB9CFB7" ShadowDepth="4" Direction="315" />
+            </Label.Effect>
+        
+        </Label>
     </Grid>
 </Window>
